--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,50 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <link rel="icon" href="favicon.ico" />
+      <title>Main</title>
 
-    <title>Das Boot - Shipwrecks</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
-    <!-- Bootstrap core CSS -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Bootstrap theme -->
-    <link href="lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
-    <!-- Angular CSP-->
-    <link href="lib/angular/css/angular-csp.css" rel="stylesheet" />
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="lib/html5shiv/html5shiv.min.js"></script>
-      <script src="lib/respond/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- require -->
-    <script src="lib/require/require.js"></script>
-
-    <!-- angularjs -->
-    <link href="lib/angular/css/angular-csp.css" rel="stylesheet" />
-    <script src="lib/angular/js/angular.js"></script>
-    <script src="lib/angular/js/angular-animate.js"></script>
-    <script src="lib/angular/js/angular-resource.js"></script>
-    <script src="lib/angular/js/angular-ui-router.js"></script>
-    <script src="lib/angular/js/angular-ui-bootstrap-tpls.js"></script>
-
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/nav-controller.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-  </head>
-
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    </head>
   <body>
-    <h4>Main page</h4>
+    <button type="button" class="btn btn-primary">New game</button>
   </body>
 </html>
